documentation, javadoc, readme, contributing, license